# MPI-process-pool

./: CMakeLists.Files.txt  CMakeLists.txt  README.md  sln.bat
src/: main.cpp  tmpi_process_pool.h  tthread_safe_queue.h
